test_suite5/ALAN/test_suite/alan-2022-examples/failing/008020_mutation.alan
source YM begin while relax do relax end end
